tests/snapshots/cli_container__container_log_forwarding_get_json.snap
---
source: tests/cli_container.rs
expression: "String::from_utf8_lossy(&output.stdout)"
---
{
  "id": "lf-123",
  "app": "test-app-id",
  "productId": null,
  "type": "SyslogTcp",
  "endpoint": "logs.example.com",
  "port": 514,
  "createdAt": "2026-03-18T00:00:00Z",
  "token": null,
  "format": "SyslogRfc5424",
  "enabled": true
}
