tests/snapshots/cli_container__container_region_list_json.snap
---
source: tests/cli_container.rs
expression: "String::from_utf8_lossy(&output.stdout)"
---
{
  "items": [
    {
      "id": "DE",
      "name": "DE",
      "group": "EU",
      "hasAnycastSupport": true,
      "hasCapacity": true
    },
    {
      "id": "AMS",
      "name": "AMS",
      "group": "EU",
      "hasAnycastSupport": true,
      "hasCapacity": true
    },
    {
      "id": "HK",
      "name": "HK",
      "group": "APAC",
      "hasAnycastSupport": false,
      "hasCapacity": true
    }
  ],
  "meta": {
    "totalItems": 41
  },
  "cursor": "eyJBUElWZXJzaW9uIjoibWV0YS5ibnkubmV0L3YxIn0"
}
