tests/snapshots/cli_container__container_region_optimal_json.snap
---
source: tests/cli_container.rs
expression: "String::from_utf8_lossy(&output.stdout)"
---
{
  "region": {
    "id": "DE",
    "name": "DE",
    "group": "EU",
    "hasAnycastSupport": true,
    "hasCapacity": true
  }
}
