tests/snapshots/cli_container__container_registry_config_suggestions_json.snap
---
source: tests/cli_container.rs
expression: "String::from_utf8_lossy(&output.stdout)"
---
{
  "endpointSuggestions": [
    {
      "displayName": "endpoint-0",
      "cdn": {
        "isSslEnabled": false,
        "stickySessions": null,
        "pullZoneId": null,
        "portMappings": [
          {
            "containerPort": 80,
            "exposedPort": null,
            "protocols": [
              "Tcp"
            ]
          }
        ]
      },
      "internalIp": null,
      "publicIp": null,
      "anycast": null
    }
  ],
  "environmentVariablesSuggestions": [
    {
      "name": "NGINX_HOST",
      "defaultValue": "localhost",
      "description": "The hostname for the NGINX server.",
      "required": false
    },
    {
      "name": "NGINX_PORT",
      "defaultValue": "80",
      "description": "The port number for the NGINX server to listen on.",
      "required": false
    },
    {
      "name": "NGINX_ENVSUBST_TEMPLATE_DIR",
      "defaultValue": "/etc/nginx/templates",
      "description": "Directory containing template files for environment variable substitution.",
      "required": false
    },
    {
      "name": "NGINX_ENVSUBST_TEMPLATE_SUFFIX",
      "defaultValue": ".template",
      "description": "Suffix for template files to be processed for environment variable substitution.",
      "required": false
    },
    {
      "name": "NGINX_ENVSUBST_OUTPUT_DIR",
      "defaultValue": "/etc/nginx/conf.d",
      "description": "Directory where the processed configuration files are output.",
      "required": false
    },
    {
      "name": "NGINX_ENTRYPOINT_QUIET_LOGS",
      "defaultValue": "0",
      "description": "Set to 1 to silence verbose entrypoint logs during container startup.",
      "required": false
    }
  ],
  "appName": "NGINX",
  "description": "NGINX is an open source reverse proxy server for HTTP, HTTPS, SMTP, POP3, and IMAP protocols, as well as a load balancer, HTTP cache, and a web server.",
  "instructions": "To configure environment variables for NGINX, you can use them in your configuration templates. The image supports environment variable substitution in configuration files, which allows you to dynamically set configuration values at runtime. Place your template files in the specified directory and use the default suffix for processing.",
  "registryUrl": "https://hub.docker.com/_/nginx"
}
