tests/snapshots/cli_container__container_registry_create_json.snap
---
source: tests/cli_container.rs
expression: "String::from_utf8_lossy(&output.stdout)"
---
{
  "id": 9999,
  "error": null,
  "status": "Saved"
}
