tests/snapshots/cli_container__container_registry_get_json.snap
---
source: tests/cli_container.rs
expression: "String::from_utf8_lossy(&output.stdout)"
---
{
  "id": 9999,
  "accountId": "00000000-0000-0000-0000-000000000000",
  "userId": "00000000-0000-0000-0000-000000000000",
  "namespaceId": "default",
  "displayName": "GitHub Packages testuser",
  "hostName": "ghcr.io",
  "userName": "testuser",
  "firstPasswordSymbols": null,
  "lastPasswordSymbols": null,
  "createdAt": "2024-01-01T00:00:00.000000",
  "isPublic": false,
  "lastUpdatedAt": null
}
