tests/snapshots/cli_container__container_registry_image_digest_json.snap
---
source: tests/cli_container.rs
expression: "String::from_utf8_lossy(&output.stdout)"
---
{
  "imageNamespace": "library",
  "image": "nginx",
  "tag": "alpine",
  "digest": "sha256:08fe94b0d1e72fc687840f5696f6e107a85c327b1bcb8a7acc22f8c100227c67"
}
