tests/snapshots/cli_container__container_registry_image_tags_json.snap
---
source: tests/cli_container.rs
expression: "String::from_utf8_lossy(&output.stdout)"
---
[
  {
    "name": "latest"
  },
  {
    "name": "alpine"
  },
  {
    "name": "stable"
  }
]
