tests/snapshots/cli_container__container_registry_list_json.snap
---
source: tests/cli_container.rs
expression: "String::from_utf8_lossy(&output.stdout)"
---
{
  "items": [
    {
      "id": 9999,
      "accountId": "00000000-0000-0000-0000-000000000000",
      "userId": "00000000-0000-0000-0000-000000000000",
      "namespaceId": "default",
      "displayName": "GitHub Packages testuser",
      "hostName": "ghcr.io",
      "userName": "testuser",
      "firstPasswordSymbols": null,
      "lastPasswordSymbols": null,
      "createdAt": "2024-01-01T00:00:00.000000",
      "isPublic": false,
      "lastUpdatedAt": null
    },
    {
      "id": 1155,
      "accountId": "global",
      "userId": null,
      "namespaceId": "default",
      "displayName": "DockerHub Public",
      "hostName": "docker.io",
      "userName": null,
      "firstPasswordSymbols": null,
      "lastPasswordSymbols": null,
      "createdAt": "2024-04-29T09:25:34.402443",
      "isPublic": true,
      "lastUpdatedAt": "2024-04-29T09:25:34.402443"
    },
    {
      "id": 1156,
      "accountId": "global",
      "userId": null,
      "namespaceId": "default",
      "displayName": "GitHub Public",
      "hostName": "ghcr.io",
      "userName": null,
      "firstPasswordSymbols": null,
      "lastPasswordSymbols": null,
      "createdAt": "2024-04-29T09:25:34.402443",
      "isPublic": true,
      "lastUpdatedAt": "2024-04-29T09:25:34.402443"
    }
  ],
  "meta": {
    "totalItems": 3
  },
  "cursor": null
}
