tests/snapshots/cli_container__container_registry_search_public_json.snap
---
source: tests/cli_container.rs
expression: "String::from_utf8_lossy(&output.stdout)"
---
[
  {
    "id": "nginx",
    "namespace": "dhi"
  },
  {
    "id": "nginx",
    "namespace": "library"
  },
  {
    "id": "nginx-ingress",
    "namespace": "nginx"
  }
]
